--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -33,6 +33,7 @@
                 <nav>
                     <a href="{{ site.baseurl }}/">Inicio</a>
                     <a href="{{ site.baseurl }}/about">Acerca</a>
+                    <a href="{{ site.baseurl }}/projecteDAW">Proyecto DAW</a>
                 </nav>
             </header>
         </div>
